<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="398dp"
    android:layout_height="106dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="406dp"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/popup_CreateDeckTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:text="@string/new_deck"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textScaleX="1.2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_popupCreate"
            app:layout_constraintStart_toEndOf="@+id/btn_popupBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_popupBack"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="#FFFFFF"
            android:text="@string/btn_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_popupCreate"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            android:text="@string/btn_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

<EditText
    android:id="@+id/tv_popupDeckId"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:hint="@string/hint_id"
    android:padding="14dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/tv_popupDeckName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardView" />

<EditText
    android:id="@+id/tv_popupDeckName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:hint="@string/hint_name"
    android:padding="14dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/tv_popupDeckDescription"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_popupDeckId" />

<EditText
    android:id="@+id/tv_popupDeckDescription"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:hint="@string/hint_description"
    android:padding="14dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/tv_popupDeckIcon"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_popupDeckName" />

<EditText
    android:id="@+id/tv_popupDeckIcon"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:hint="@string/hint_icon_url"
    android:padding="14dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_popupDeckDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>